tests/NormalTests/paczka1/small_fuzzy/87227049.err
Error in line 7: qjCrkrN7wV S963 52,1
Error in line 1: er3mzMf S755 57,2
